# Stitch-Agent

./: .gitignore  .stitch.example.yml  .stitch.yml  CHANGELOG.md  CONTRIBUTING.md  ISSUE-unrecognized-error-patterns.md  LICENSE  README.md  biome.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.omc/: project-memory.json
.omc/sessions/: 66c0a4a7-f9c1-464c-957a-c3730fdf8be7.json  71f041e0-a636-4d45-ba69-6d767cd732b3.json  ae2c01ba-e308-4128-96ef-4dfeeb4262e7.json
.omc/state/: agent-replay-ae2c01ba-e308-4128-96ef-4dfeeb4262e7.jsonl  agent-replay-f5c2b032-e453-43cc-a229-39b536eb6132.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: storm-patterns.md
runners/: ci_runner.py  cli.py  generate_command.py  run_command.py  webhook.py
runners/examples/: dagster_runner.py  prefect_runner.py  temporal_runner.py
skills/stitch/: SKILL.md
src/: cli.ts  index.ts  util.ts  version.ts
src/commands/: doctor.ts  generate.ts  history.ts  run.ts
src/core/: ci-detect.ts  ci-parser.ts  config.ts  executor.ts  filter.ts  git.ts  gitignore.ts  history.ts  lock-signals.ts  models.ts  repo-context.ts  runner.ts  watcher.ts
src/drivers/: claude-code.ts  codex.ts  prompt.ts  types.ts
stitch_agent/: __init__.py  config.py  history.py  models.py  settings.py
stitch_agent/adapters/: __init__.py  base.py  github.py  gitlab.py
stitch_agent/core/: agent.py  classifier.py  fixer.py  notifier.py  patch_validator.py  pr_creator.py  validator.py  workspace.py
stitch_agent/run/: git.py  (+10 more)
tests/: helpers.ts
(+65 files in other folders)
